--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,20 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependency directories
+node_modules/
+dist/
+dist-ssr/
 
-# Editor directories and files
+# Local environment files
+*.local
+.env
+.env.*          # catch .env.development, etc.
+
+# Editor configs
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
